# kemet-data

./: .gitignore  DATABASE.md  LICENSE  Makefile  README.md  TODO.md  cookbook.py  pyproject.toml
docs/: DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  README.md  config.example.js  index.html
docs/assets/js/: config.js  db-manager.js
docs/assets/js/components/: concordance-view.js  dictionary.js  lemma-detail.js  query-builder.js  sql-editor.js
docs/assets/js/utils/: export.js  sql-templates.js  unicode-utils.js
docs/assets/lib/: package-lock.json  package.json
etc/: settings.yaml  sources.yaml
etc/catalog/: README.md  catalog.json
etc/schemas/: alignment.schema.json  corpus_schema.sql  document.schema.json  lexicon_schema.sql  manifest.schema.json  segment.schema.json  token.schema.json
scripts/: __init__.py  demo.py  import_cdo_lexicon.py  import_coptic_etymologies.py  kemet_cli.py  models.py  prototype_cdo_extractor.py  validate_database_examples.py
scripts/database/: __init__.py  builder.py  schema.py
scripts/export/: catalog.py  make_tokenizer_corpus.py
scripts/ingest/: aes.py  base.py  horner.py  ramses.py  scriptorium.py  tla.py  tla_huggingface.py  ud_coptic.py
scripts/ingest/_deprecated/: tla_api_fetcher.py  tla_populate_db.py
scripts/lexicon/: __init__.py  builder.py
scripts/normalize/: coptic_unicode.py  segmentation.py  transliteration.py
scripts/qc/: dedup.py  run_validation.py  unicode_sanity.py  validate_schema.py
scripts/utils/: hashing.py  io.py  log.py  parallel.py  rate.py  schema.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_horner.txt  sample_scriptorium.conllu  sample_scriptorium_meta.json  sample_ud_coptic.conllu
tests/integration/: __init__.py  test_pipeline.py  test_tla_integration.py
tests/unit/: test_coptic_unicode.py  test_hashing.py  test_schema_validation.py
web/assets/css/: main.css
web/assets/js/: app.js  config.js  db-manager.js
web/assets/js/components/: loading-screen.js  results-table.js
web/assets/js/utils/: cookbook.js
web/assets/lib/duckdb/: duckdb-esm.js  duckdb-mvp.wasm.js
