[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kemet-data"
version = "0.1.0"
description = "Data ingestion and curation pipeline for Coptic and Egyptian texts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "KEMET Project"}
]
dependencies = [
    "click>=8.1.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
    "blake3>=0.4.0",
    "duckdb>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pandas-stubs>=2.0.0",
    "types-requests>=2.31.0",
    "types-jsonschema>=4.20.0",
]

[project.scripts]
kemet = "scripts.kemet_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

# Exclude patterns
extend-exclude = [
    "scripts/prototype_*.py",
    "scripts/import_*.py",
    "scripts/ingest/_deprecated",
]

[tool.ruff.lint]
# Enable additional rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern Python idioms)
    "B",   # flake8-bugbear (likely bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function call in argument defaults (Click uses this pattern)
    "B904",  # Within an except clause, raise exceptions with `raise ... from err`
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["scripts"]
force-single-line = false
lines-after-imports = 2

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "scripts/prototype_.*\\.py$",
    "scripts/import_.*\\.py$",
    "scripts/ingest/_deprecated/.*\\.py$"
]

# Exclude deprecated code from type checking
[[tool.mypy.overrides]]
module = "scripts.ingest._deprecated"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
